Fixed: Overflow wasn't working on error handler verbose output. Fixed: Searching for user's posts via profile popup was broken.

--- a/forum/styles/apple/style.css
+++ b/forum/styles/apple/style.css
@@ -1243,7 +1243,7 @@ a {
     border-left-width: 1px;
     border-style: inset;
     height: 200px;
-    width: 95%;
+    width: 570px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
     text-align: left;
