--- a/forum/styles/style.css
+++ b/forum/styles/style.css
@@ -1241,7 +1241,7 @@ a {
     border-left-width: 1px;
     border-style: inset;
     height: 200px;
-    width: 95%;
+    width: 570px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
     text-align: left;
